--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.21.1",
     "echarts-for-react": "^3.0.2",
     "echarts": "^5.5.0",
+    "dayjs": "^1.11.13",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
